SM-38 SM-25 images can be uploaded on the update recipe page and seen on both update and detail recipe pages

--- a/src/main/resources/static/css/socialmeals.css
+++ b/src/main/resources/static/css/socialmeals.css
@@ -97,3 +97,25 @@ h3 {
 .increase-font, .table {
     font-size: 1.2rem;
 }
+
+.center{
+    align-items: center;
+}
+
+.cookingInstructions{
+    padding-left: 3em;
+}
+
+.addToCookbook{
+    float: right;
+}
+
+.stepsSpacing{
+    padding: 0.5em;
+}
+
+.recipeImage{
+    height: 250px;
+    width: 250px;
+    object-fit: cover;
+}
