--- a/src/main/resources/templates/recipeDetails.html
+++ b/src/main/resources/templates/recipeDetails.html
@@ -15,15 +15,40 @@
 
 
     <div class="row form-control-height">
-        <div class="col-3">
-            <h2>made by
-                <a th:href="@{/cookbook/myCookbook/{username}(username = ${recipe.socialMealsUserDTO.username})}"
-                   th:text="${recipe.socialMealsUserDTO.username}" sec:authorize="isAuthenticated()"></a>
-                <span th:text="${recipe.socialMealsUserDTO.username}" sec:authorize="isAnonymous()"></span>
-                <br>
-            </h2>
 
-            <div th:if="${loggedInUser}">
+        <div class="col-3 center">
+
+            <div>
+                <img class="recipeImage" th:src="*{'data:image/png;base64,' + recipeImage}">
+            </div>
+
+            <div>
+                <h2>made by
+                    <a th:href="@{/cookbook/myCookbook/{username}(username = ${recipe.socialMealsUserDTO.username})}"
+                       th:text="${recipe.socialMealsUserDTO.username}" sec:authorize="isAuthenticated()"></a>
+                    <span th:text="${recipe.socialMealsUserDTO.username}" sec:authorize="isAnonymous()"></span>
+                    <br>
+                </h2>
+            </div>
+
+            <br>
+
+            <div>
+
+                <ul class="shoppingListPostIT listWithoutStyle">
+                    <h3>Shopping list</h3>
+
+                    <li th:each="ingredientRecipe : ${ingredientRecipes}">
+                        <a th:text=" ${ingredientRecipe.ingredientDTO.ingredientName} + ' (' + ${ingredientRecipe.getQuantityAsString() + ' ' + ingredientRecipe.quantityType} +') ' "></a>
+                    </li>
+                </ul>
+            </div>
+
+        </div>
+
+        <div class="col-9 cookingInstructions">
+
+            <div class="addToCookbook" th:if="${loggedInUser}">
                 <div class="dropdown">
                     <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Add to Cookbook
@@ -36,26 +61,14 @@
                 </div>
             </div>
 
-        </div>
+            <br>
 
-        <div class="col-6">
             <h3>Cooking instructions</h3>
             <ol>
-                <li th:each="step, iterStep : ${recipe.steps}">
-                    <a th:text="${step}"></a>
+                <li class="stepsSpacing" th:each="step, iterStep : ${recipe.steps}">
+                    <span th:text="${step}"></span>
                 </li>
             </ol>
-        </div>
-
-        <div class="col-3 ">
-
-            <ul class="shoppingListPostIT listWithoutStyle">
-                <h3>Shopping list</h3>
-
-                <li th:each="ingredientRecipe : ${ingredientRecipes}">
-                    <a th:text=" ${ingredientRecipe.ingredientDTO.ingredientName} + ' (' + ${ingredientRecipe.getQuantityAsString() + ' ' + ingredientRecipe.quantityType} +') ' "></a>
-                </li>
-            </ul>
         </div>
 
     </div>
