--- a/src/main/resources/templates/myCookbook.html
+++ b/src/main/resources/templates/myCookbook.html
@@ -33,6 +33,8 @@
 
 </div>
 
+<div th:replace="fragments/general :: footer"></div>
+
 <div th:replace="fragments/general :: bottomScripts"></div>
 </body>
 </html>
