--- a/src/main/resources/static/css/socialmeals.css
+++ b/src/main/resources/static/css/socialmeals.css
@@ -1,30 +1,36 @@
+.img-container {
+    overflow: hidden;
+    height: 100px;
+    position: relative;
+}
+
+.img-text {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 50px;
+    font-weight: 100;
+}
+
+.img {
+    display: block;
+    width: 100%;
+    height: auto;
+    position: absolute;
+    bottom: -50px;
+}
+
 body {
     margin: 0;
-    font-family: Arial;
     font-size: 1rem;
     font-weight: 400;
     line-height: 1.5;
 }
 
 .container {
-    background-color: white;
-    width: 60%;
-    height: auto;
-    text-align: left;
-}
-
-.header-photo {
-    background-image: url("https://upload.wikimedia.org/wikipedia/commons/e/e5/Thai_green_chicken_curry_and_roti.jpg");
-    background-size: 100%;
-    width: 100%;
-    height: 20em;
-}
-
-h1 {
-    font-size: 30pt;
-    font-family: Arial;
-    text-align: center;
-    font-weight: 100;
+    width: 80%;
+    margin: 0 auto;
 }
 
 h2 {
