--- a/src/main/resources/templates/cookbookDetails.html
+++ b/src/main/resources/templates/cookbookDetails.html
@@ -42,6 +42,8 @@
 
 </div>
 
+<div th:replace="fragments/general :: footer"></div>
+
 <div th:replace="fragments/general :: bottomScripts"></div>
 </body>
 </html>
