--- a/src/main/resources/templates/cookbookForm.html
+++ b/src/main/resources/templates/cookbookForm.html
@@ -23,6 +23,8 @@
 
 </div>
 
+<div th:replace="fragments/general :: footer"></div>
+
 <div th:replace="fragments/general :: bottomScripts"></div>
 </body>
 </html>
