--- a/src/main/resources/templates/cookbookUpdateForm.html
+++ b/src/main/resources/templates/cookbookUpdateForm.html
@@ -26,6 +26,8 @@
 
 </div>
 
+<div th:replace="fragments/general :: footer"></div>
+
 <div th:replace="fragments/general :: bottomScripts"></div>
 </body>
 </html>
