--- a/src/main/resources/templates/updateRecipeForm.html
+++ b/src/main/resources/templates/updateRecipeForm.html
@@ -101,7 +101,8 @@
 
 </div>
 
-<div th:replace="fragments/general :: bottomScripts"></div>
+<div th:replace="fragments/general :: footer"></div>
 
+<div th:replace="fragments/general :: bottomScripts"></div>
 </body>
 </html>
