--- a/src/main/resources/templates/userForm.html
+++ b/src/main/resources/templates/userForm.html
@@ -34,6 +34,8 @@
 
 </div>
 
+<div th:replace="fragments/general :: footer"></div>
+
 <div th:replace="fragments/general :: bottomScripts"></div>
 </body>
 </html>
