--- a/src/main/resources/templates/updateRecipeForm.html
+++ b/src/main/resources/templates/updateRecipeForm.html
@@ -7,7 +7,7 @@
 
 <div class="container">
 
-    <div th:replace="fragments/general :: headerPhoto">
+    <div th:replace="fragments/general :: headerPhoto('Update recipe')">
 
     </div>
     <div th:replace="fragments/general :: navbar"></div>
