--- a/src/main/resources/templates/cookbookDetails.html
+++ b/src/main/resources/templates/cookbookDetails.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="NL-nl" xmlns:th="https://www.thymeleaf.org" xmlns:sec="https://www.thymeleaf.org">
 <head th:replace="fragments/general :: baseHeader(~{:: title})">
-    <title></title>
+    <title th:text="${cookbookDTO.cookbookName}"></title>
 </head>
 <body>
 
 <div class="container">
 
-    <div th:replace="fragments/general :: headerPhoto"></div>
+    <div th:replace="fragments/general :: headerPhoto(${cookbookDTO.cookbookName})"></div>
     <div th:replace="fragments/general :: navbar"></div>
 
 
