--- a/src/main/resources/templates/cookbookForm.html
+++ b/src/main/resources/templates/cookbookForm.html
@@ -7,7 +7,7 @@
 
 <div class="container">
 
-    <div th:replace="fragments/general :: headerPhoto"></div>
+    <div th:replace="fragments/general :: headerPhoto('New cookbook')"></div>
     <div th:replace="fragments/general :: navbar"></div>
 
     <h1>Add new cookbook</h1>
