--- a/src/main/resources/templates/cookbookUpdateForm.html
+++ b/src/main/resources/templates/cookbookUpdateForm.html
@@ -7,7 +7,7 @@
 
 <div class="container">
 
-  <div th:replace="fragments/general :: headerPhoto"></div>
+  <div th:replace="fragments/general :: headerPhoto('New cookbook')"></div>
   <div th:replace="fragments/general :: navbar"></div>
 
   <h1><span th:text="'Edit ' + ${cookbookDTO.cookbookName}"></span></h1>
