--- a/src/main/resources/templates/myCookbook.html
+++ b/src/main/resources/templates/myCookbook.html
@@ -7,7 +7,7 @@
 
 <div class="container">
 
-    <div th:replace="fragments/general :: headerPhoto"></div>
+    <div th:replace="fragments/general :: headerPhoto(${socialMealsUserDTO.username} + '\'s cookbook')"></div>
     <div th:replace="fragments/general :: navbar"></div>
 
     <h1><span th:text="${socialMealsUserDTO.username} + '\'s cookbook'"></span></h1>
