--- a/src/main/resources/templates/myKitchen.html
+++ b/src/main/resources/templates/myKitchen.html
@@ -7,7 +7,7 @@
 
 <div class="container">
 
-    <div th:replace="fragments/general :: headerPhoto"></div>
+    <div th:replace="fragments/general :: headerPhoto('My kitchen')"></div>
     <div th:replace="fragments/general :: navbar"></div>
 
     <h1>My kitchen</h1>
