--- a/src/main/resources/templates/recipeDetails.html
+++ b/src/main/resources/templates/recipeDetails.html
@@ -8,7 +8,7 @@
 
 <div class="container">
 
-    <div th:replace="fragments/general :: headerPhoto"></div>
+    <div th:replace="fragments/general :: headerPhoto(${recipe.recipeName})"></div>
     <div th:replace="fragments/general :: navbar"></div>
 
     <h1><span th:text="${recipe.recipeName}"></span></h1>
