--- a/src/main/resources/templates/userForm.html
+++ b/src/main/resources/templates/userForm.html
@@ -7,7 +7,7 @@
 
 <div class="container">
 
-    <div th:replace="fragments/general :: headerPhoto"></div>
+    <div th:replace="fragments/general :: headerPhoto('Register')"></div>
     <div th:replace="fragments/general :: navbar"></div>
 
     <h1>Register</h1>
