--- a/src/main/resources/templates/updateRecipeForm.html
+++ b/src/main/resources/templates/updateRecipeForm.html
@@ -7,11 +7,8 @@
 
 <div class="container">
 
-    <div th:replace="fragments/general :: headerPhoto('Update recipe')">
-
-    </div>
+    <div th:replace="fragments/general :: headerPhoto('Update recipe')"></div>
     <div th:replace="fragments/general :: navbar"></div>
-    <h1>Edit</h1>
 
     <div class="row form-control-height">
 
