--- a/src/main/resources/templates/myKitchen.html
+++ b/src/main/resources/templates/myKitchen.html
@@ -15,13 +15,13 @@
     <div class="row justify-content-md-center list-styling">
         <div class="col-8">
             <div class="d-flex flex-row-reverse increase-font">
-                <a class="text-decoration-none" th:href="@{/MyKitchen/addCookbook}">Create Cookbook</a>
+                <a class="text-decoration-none" th:href="@{/MyKitchen/addCookbook}">Create cookbook</a>
             </div>
 
             <table class="table">
                 <tr class="row-even-spacing">
                     <td class="align-middle">
-                        <a class="text-decoration-none" th:href="@{/cookbook/myCookbook/{username}(username=${user.username})}">My Recipes</a>
+                        <a class="text-decoration-none" th:href="@{/cookbook/myCookbook/{username}(username=${user.username})}">My recipes</a>
                     </td>
                     <td></td>
                 </tr>
@@ -38,8 +38,6 @@
         </div>
 
     </div>
-
-
 
 </div>
 
