--- a/src/main/resources/templates/updateRecipeForm.html
+++ b/src/main/resources/templates/updateRecipeForm.html
@@ -10,35 +10,16 @@
     <div th:replace="fragments/general :: headerPhoto('Update recipe')"></div>
     <div th:replace="fragments/general :: navbar"></div>
 
-    <div class="row form-control-height">
-
-        <div class="col-3"></div>
-
-        <div class="col-7">
-
-            <h3>Update steps</h3>
-
-            <form class="has-validation" th:action="@{/recipe/update/updateSteps}" method="post"
-                  th:object="${recipeDTO}">
-
-                <div th:replace="fragments/forms :: recipeForm"></div>
-            </form>
-        </div>
-
-    </div>
-
     <div class="row">
 
-        <div class="col-4"></div>
         <div class="col-7">
-            <h3>Update image</h3>
             <img class="recipeImage" th:src="*{'data:image/png;base64,' + recipeImage}">
 
             <form th:action="@{/recipe/update/{urlId}/updateImage(urlId = ${recipeDTO.urlId})}" method="post"
                   enctype="multipart/form-data">
                 <input type="file" name="multipartImage" accept="image/*">
                 <div>
-                    <button type="submit" class="btn btn-primary">Save</button>
+                    <button type="submit" class="btn btn-primary">Upload image</button>
                 </div>
 
             </form>
@@ -46,7 +27,42 @@
 
     </div>
 
+
     <div class="row form-control-height">
+
+        <div class="col-4">
+            <h3>Shopping list</h3>
+
+            <ul class="listWithoutStyle">
+                <li th:each="ingredientRecipe : ${presentIngredientsRecipes}">
+
+                    <div class="row updateShoppingList">
+
+                        <div class="col-4">
+                            <span th:text="${ingredientRecipe.ingredientDTO.ingredientName}"></span>
+                        </div>
+
+                        <div class="col-6">
+                            <span th:text="${ingredientRecipe.getQuantityAsString() + ' ' + ingredientRecipe.quantityType}"></span>
+                        </div>
+
+                        <div class="col-1">
+
+                            <a class="confirmDelete btn btn-primary"
+                               th:href="@{/recipe/delete/{urlId}/{ingredientName}
+                                    (urlId=${ingredientRecipe.recipeDTO.urlId},
+                                        ingredientName=${ingredientRecipe.ingredientDTO.ingredientName})}"><i
+                                    class="fas fa-trash"></i>
+                            </a>
+                        </div>
+
+                    </div>
+
+                </li>
+            </ul>
+        </div>
+
+        <div class="col-1"></div>
 
         <div class="col-7">
             <h3>Add ingredients</h3>
@@ -81,41 +97,23 @@
                 </div>
             </form>
         </div>
+</div>
 
-        <div class="col-4">
-            <h3>Shopping list</h3>
 
-            <ul class="listWithoutStyle">
-                <li th:each="ingredientRecipe : ${presentIngredientsRecipes}">
+    <div class="row form-control-height">
 
-                    <div class="row updateShoppingList">
+        <div class="col-7">
 
-                        <div class="col-4">
-                            <span th:text="${ingredientRecipe.ingredientDTO.ingredientName}"></span>
-                        </div>
+            <h3>Steps</h3>
 
-                        <div class="col-6">
-                            <span th:text="${ingredientRecipe.getQuantityAsString() + ' ' + ingredientRecipe.quantityType}"></span>
-                        </div>
+            <form class="has-validation" th:action="@{/recipe/update/updateSteps}" method="post"
+                  th:object="${recipeDTO}">
 
-                        <div class="col-1">
-
-                            <a class="confirmDelete btn btn-primary"
-                               th:href="@{/recipe/delete/{urlId}/{ingredientName}
-                                    (urlId=${ingredientRecipe.recipeDTO.urlId},
-                                        ingredientName=${ingredientRecipe.ingredientDTO.ingredientName})}"><i
-                                    class="fas fa-trash"></i>
-                            </a>
-                        </div>
-
-                    </div>
-
-                </li>
-            </ul>
+                <div th:replace="fragments/forms :: recipeForm"></div>
+            </form>
         </div>
 
     </div>
-
 
 </div>
 
