Added title icon and text

--- a/src/main/resources/templates/fragments/general.html
+++ b/src/main/resources/templates/fragments/general.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="NL-nl" xmlns:th="https://www.thymeleaf.org" xmlns:sec="https://www.thymeleaf.org">
-<head th:fragment="baseHeader(title)">
+<head th:fragment="baseHeader">
   <meta charset="UTF-8">
-  <title th:replace="${title}">baseTitle</title>
+  <title>SocialMeals</title>
+  <link rel="icon" type="image/png" href="/images/favicon.png">
   <link th:rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"/>
   <link rel="stylesheet" type="text/css" href="/css/socialmeals.css" >
   <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/smoothness/jquery-ui.css">
