--- a/src/main/resources/templates/myKitchen.html
+++ b/src/main/resources/templates/myKitchen.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html lang="NL-nl" xmlns:th="https://www.thymeleaf.org" xmlns:sec="https://www.thymeleaf.org">
-<head th:replace="fragments/general :: baseHeader(~{:: title})">
-    <title>My kitchen</title>
-</head>
+<div th:replace="fragments/general :: baseHeader"></div>
 <body>
 
 <div class="container">
