--- a/src/main/resources/templates/recipeOverview.html
+++ b/src/main/resources/templates/recipeOverview.html
@@ -1,9 +1,6 @@
 <!DOCTYPE html>
-<html lang="NL-nl" xmlns:th="https://www.thymeleaf.org">
-<head th:replace="fragments/general :: baseHeader(~{:: title})">
-    <title>Browse recipes</title>
-</head>
-
+<html lang="NL-nl" xmlns:th="https://www.thymeleaf.org" xmlns:sec="https://www.thymeleaf.org">
+<div th:replace="fragments/general :: baseHeader"></div>
 <body>
 
 <div class="container">
