new header photo

--- a/src/main/resources/templates/fragments/general.html
+++ b/src/main/resources/templates/fragments/general.html
@@ -12,7 +12,7 @@
 <body>
 
 <div class="img-container" th:fragment="headerPhoto(headerTitle)">
-    <img class="img" src="https://www.pulsemaster.us/wp-content/uploads/2014/10/potato-header.jpg"/>
+    <img class="img" src="/headerImage/SMheader.png"/>
     <div class="img-text" th:text="${headerTitle}"></div>
 </div>
 
