--- a/src/main/resources/templates/fragments/general.html
+++ b/src/main/resources/templates/fragments/general.html
@@ -1,66 +1,66 @@
 <!DOCTYPE html>
 <html lang="NL-nl" xmlns:th="https://www.thymeleaf.org" xmlns:sec="https://www.thymeleaf.org">
 <head th:fragment="baseHeader">
-  <meta charset="UTF-8">
-  <title>SocialMeals</title>
-  <link rel="icon" type="image/png" href="/images/favicon.png">
-  <link th:rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"/>
-  <link rel="stylesheet" type="text/css" href="/css/socialmeals.css" >
-  <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/smoothness/jquery-ui.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-confirm/3.3.2/jquery-confirm.min.css">
-  <script src="https://kit.fontawesome.com/79dcf535d0.js" crossorigin="anonymous"></script>
+    <meta charset="UTF-8">
+    <title>SocialMeals</title>
+    <link rel="icon" type="image/png" href="/images/favicon.png">
+    <link th:rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"/>
+    <link rel="stylesheet" type="text/css" href="/css/socialmeals.css">
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/smoothness/jquery-ui.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-confirm/3.3.2/jquery-confirm.min.css">
+    <script src="https://kit.fontawesome.com/79dcf535d0.js" crossorigin="anonymous"></script>
 </head>
 <body>
 
 <div class="img-container" th:fragment="headerPhoto(headerTitle)">
-    <img class="img" src="/images/SMheader.png"/>
+    <img class="img" src="https://i.ibb.co/P6P0DPt/SMheader.png"/>
     <div class="img-text" th:text="${headerTitle}"></div>
 </div>
 
 <nav class="navbar navbar-expand-lg navbar-light shadow-sm p-3 mb-5 bg-white rounded" th:fragment="navbar">
 
-  <div class="collapse navbar-collapse d-flex">
-    <ul class="navbar-nav mr-auto">
+    <div class="collapse navbar-collapse d-flex">
+        <ul class="navbar-nav mr-auto">
 
-      <li class="nav-item active">
-        <a class="nav-link" th:href="@{/recipes}">Recipes</a>
-      </li>
-      <li class="nav-item active">
-        <a class="nav-link" th:href="@{/recipe/new}" sec:authorize="isAuthenticated()">New</a>
-      </li>
-      <li class="nav-item active">
-        <a class="nav-link" th:href="@{/MyKitchen}" sec:authorize="isAuthenticated()">My Kitchen</a>
-      </li>
-      </ul>
+            <li class="nav-item active">
+                <a class="nav-link" th:href="@{/recipes}">Recipes</a>
+            </li>
+            <li class="nav-item active">
+                <a class="nav-link" th:href="@{/recipe/new}" sec:authorize="isAuthenticated()">New</a>
+            </li>
+            <li class="nav-item active">
+                <a class="nav-link" th:href="@{/MyKitchen}" sec:authorize="isAuthenticated()">My Kitchen</a>
+            </li>
+        </ul>
 
-    <ul class="navbar-nav">
-      <li class="nav-item active">
-        <a class="nav-link" th:href="@{/user/new}" sec:authorize="isAnonymous()">Register</a>
-      </li>
-      <li class="nav-item active">
-        <a class="nav-link" th:href="@{/login}" sec:authorize="isAnonymous()">Log in</a>
-      </li>
-      <li class="nav-item active">
-        <a class="nav-link" th:href="@{/logout}" sec:authorize="isAuthenticated()">Logout</a>
-      </li>
-    </ul>
-  </div>
+        <ul class="navbar-nav">
+            <li class="nav-item active">
+                <a class="nav-link" th:href="@{/user/new}" sec:authorize="isAnonymous()">Register</a>
+            </li>
+            <li class="nav-item active">
+                <a class="nav-link" th:href="@{/login}" sec:authorize="isAnonymous()">Log in</a>
+            </li>
+            <li class="nav-item active">
+                <a class="nav-link" th:href="@{/logout}" sec:authorize="isAuthenticated()">Logout</a>
+            </li>
+        </ul>
+    </div>
 </nav>
 
 <div th:fragment="footer">
-  <footer class="page-footer font-small blue pt-4">
-    <div class="footer-copyright text-center py-3">© 2021 Copyright: CodeChefs</div>
-  </footer>
+    <footer class="page-footer font-small blue pt-4">
+        <div class="footer-copyright text-center py-3">© 2021 Copyright: CodeChefs</div>
+    </footer>
 </div>
 
 <div th:fragment="bottomScripts">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js"></script>
-  <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
-  <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-confirm/3.3.2/jquery-confirm.min.js"></script>
-  <script src="/js/scripts.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js"></script>
+    <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-confirm/3.3.2/jquery-confirm.min.js"></script>
+    <script src="/js/scripts.js"></script>
 
 </div>
 </body>
