--- a/src/main/resources/templates/fragments/rating.html
+++ b/src/main/resources/templates/fragments/rating.html
@@ -10,8 +10,9 @@
 
     <div th:fragment="starRatings">
         <div class="present-star-rating d-flex justify-content-right flex-row-reverse">
-            <span th:if="${numberRatings} == 1" th:text="' (' + ${numberRatings} + ' review)'"></span>
-            <span th:if="${numberRatings > 1}" th:text="' (' + ${numberRatings} + ' reviews)'"></span>
+            <span th:if="${recipe.numberOfRatings} == 0" th:text="' (' + ${recipe.numberOfRatings} + ' reviews)'"></span>
+            <span th:if="${recipe.numberOfRatings} == 1" th:text="' (' + ${recipe.numberOfRatings} + ' review)'"></span>
+            <span th:if="${recipe.numberOfRatings} > 1" th:text="' (' + ${recipe.numberOfRatings} + ' reviews)'"></span>
 
             <input class="radioRating" type="radio" id="stars5" value="5" name="stars">
             <label class="radioRating" for="stars5" title="5 star"><i class="fas fa-star"></i></label>
@@ -27,6 +28,7 @@
 
             <input class="radioRating" type="radio" id="stars1" value="1" name="stars">
             <label class="radioRating" for="stars1" title="1 star"><i class="fas fa-star"></i></label>
+
         </div>
     </div>
 
