--- a/src/main/resources/templates/userForm.html
+++ b/src/main/resources/templates/userForm.html
@@ -8,19 +8,21 @@
     <div th:replace="fragments/general :: headerPhoto('Register')"></div>
     <div th:replace="fragments/general :: navbar"></div>
 
-    <br>
     <form th:action="@{/user/new}" th:object="${user}" method="post">
-        <div class="form-group row">
-            <label for="username" class="col-sm-2 col-form-label">Username:</label>
-            <input type="text" id="username" th:field="*{username}" class="form-control form-control-with">
-        </div>
-
-        <div class="form-group row">
-            <label for="password" class="col-sm-2 col-form-label">Password:</label>
-            <input type="password" id="password" th:field="*{password}" class="form-control form-control-with">
-        </div>
-        <div>
-            <input type="submit" value="Register" class="btn btn-primary"/>
+        <div class="row form-control-height">
+            <div class="col-6">
+                <div class="form-group">
+                    <label for="username">Username:</label>
+                    <input type="text" id="username" th:field="*{username}" class="form-control form-control-with" required>
+                </div>
+                <div class="form-group">
+                    <label for="password">Password:</label>
+                    <input type="password" id="password" th:field="*{password}" class="form-control form-control-with" required>
+                </div>
+                <div>
+                    <input type="submit" value="Register" class="btn btn-primary"/>
+                </div>
+            </div>
         </div>
     </form>
 
