--- a/src/main/resources/templates/fragments/general.html
+++ b/src/main/resources/templates/fragments/general.html
@@ -13,7 +13,7 @@
 <body>
 
 <div class="img-container" th:fragment="headerPhoto(headerTitle)">
-    <img class="img" src="https://i.ibb.co/P6P0DPt/SMheader.png"/>
+      <img class="img" src="/images/SMheader.png"/>
     <div class="img-text" th:text="${headerTitle}"></div>
 </div>
 
