--- a/src/main/resources/templates/myKitchen.html
+++ b/src/main/resources/templates/myKitchen.html
@@ -5,7 +5,7 @@
 
 <div class="container">
 
-    <div th:replace="fragments/general :: headerPhoto('My kitchen')"></div>
+    <div th:replace="fragments/general :: headerPhoto('My Kitchen')"></div>
     <div th:replace="fragments/general :: navbar"></div>
 
     <br>
