--- a/src/main/resources/templates/recipeOverview.html
+++ b/src/main/resources/templates/recipeOverview.html
@@ -5,7 +5,7 @@
 
 <div class="container">
 
-    <div th:replace="fragments/general :: headerPhoto('Browse recipes')"></div>
+    <div th:replace="fragments/general :: headerPhoto('Browse Recipes')"></div>
     <div th:replace="fragments/general :: navbar"></div>
 
     <form class="searchRecipe" th:action="@{/recipes/search}">
