--- a/src/main/resources/templates/updateRecipeForm.html
+++ b/src/main/resources/templates/updateRecipeForm.html
@@ -5,7 +5,7 @@
 
 <div class="container">
 
-    <div th:replace="fragments/general :: headerPhoto('Update recipe')"></div>
+    <div th:replace="fragments/general :: headerPhoto('Update Recipe')"></div>
     <div th:replace="fragments/general :: navbar"></div>
 
     <div class="row">
