--- a/src/main/resources/templates/myCookbook.html
+++ b/src/main/resources/templates/myCookbook.html
@@ -5,7 +5,7 @@
 
 <div class="container">
 
-    <div th:replace="fragments/general :: headerPhoto(${socialMealsUserDTO.username} + '\'s recipes')"></div>
+    <div th:replace="fragments/general :: headerPhoto(${socialMealsUserDTO.username} + '\'s Recipes')"></div>
     <div th:replace="fragments/general :: navbar"></div>
 
     <form class="searchRecipe" th:action="@{/cookbook/recipe/search}">
